# AxEngine

./: .gitignore  Readme.md
dev/: .clang-format  .clang-tidy  .gitignore  AxEditorApp-RenderDoc-RelWithDebInfo.cap  AxEngine.code-workspace  AxEngine.sln.DotSettings  CMakeLists.txt  RunCppHeaderTool.bat  TODO.md  ax_common.cmake  build_linux_ninja.sh  build_ninja_linux.sh  build_ninja_windows.bat  build_windows_ninja.bat  gen_linux_ninja.sh  gen_vs2022-ClangCL.bat  gen_vs2022.bat  gen_windows_ninja.bat  install_ubunta_packages.sh  install_vcpkg_packages.bat  install_vcpkg_packages.sh  vs-chromium-project.txt  vscode.code-workspace
dev/AxEditorApp/: AxEditorApp-RenderDoc-Debug.cap  CMakeLists.txt
dev/AxEditorApp/src/: AxEditorApp-main.cpp  AxEditorApp-pch.h
dev/AxEngine/: NodeGenTypes._impl.h
dev/AxEngine/AxEditor/: CMakeLists.txt
dev/AxEngine/AxEditor/src/: AxEditor-Common.cppm  AxEditor-Common.h  AxEditor-pch.h  AxEditor.h  GenTypes.gen.cpp
dev/AxEngine/AxEditorApp/: CMakeLists.txt
dev/AxEngine/AxEngine/: CMakeLists.txt
dev/AxEngine/AxEngine/src/: AxEngine-Common.cppm  AxEngine-pch.h  AxEngine.cppm  AxEngine.h  GenTypes.gen.cpp
dev/AxLib8/AxCore/: CMakeLists.txt
dev/AxLib8/AxCore/src/: AX_APP_MAIN.h  AxCore-OS_Windows.h  AxCore.cppm  AxCore.h  AxCore.natvis  AxUnitTest.h
dev/AxLib8/AxCore/test/: CMakeLists.txt
dev/AxLib8/AxCore/test/src/: AxCore_Test-pch.cppm  _ALL_Test_.cpp
dev/AxLib8/AxImUI/src/: AxImUI-Common.cppm  AxImUI-pch.h  AxImUI.cppm  AxImUI.h
dev/AxLib8/AxImUI/src/AxImUI/: ImGimzo.cppm  ImGizmo.cpp  ImUIApp.cpp  ImUIApp.cppm  ImUIControls.cpp  ImUIControls.cppm  ImUIRenderView.cpp  ImUIRenderView.cppm  ImUIView.cpp  ImUIView.cppm  ImUIWindow.cpp  ImUIWindow.cppm
dev/AxLib8/AxNativeUI/: CMakeLists.txt
dev/AxLib8/AxNativeUI/src/: AxNativeUI.cppm  AxNativeUI.h
dev/AxLib8/AxNativeUI/src/AxNativeUI/: NativeUIEvent.cpp  NativeUIEvent.cppm  NativeUIScreen.cppm  NativeUITimer.cppm
dev/AxLib8/AxRender/: CMakeLists.txt
dev/AxLib8/AxRender/src/: AxRender-Common.cppm  AxRender-Common.h  AxRender-DirectX12.h  AxRender-ImGui.cppm  AxRender-Vulkan.h  AxRender-pch.h  AxRender.cppm  AxRender.h  AxRender.natvis
dev/AxLib8/AxRender/src/AxRender/: AxRenderMath.cppm  AxRender_MACRO.h  RenderContext.cppm  RenderDataType.cppm  RenderObjectTable.cppm  RenderStockObjects.cpp  RenderStockObjects.cppm  RenderSystem.cpp  RenderSystem.cppm
dev/AxLib8/Tools/AxCppHeaderTool/src/: AxCppHeaderTool-App.cpp  AxCppHeaderTool-App.cppm  AxCppHeaderTool-main.cpp  AxCppHeaderTool-pch.cppm
dev/AxLib8/Tools/AxFileTool/: CMakeLists.txt
dev/AxLib8/Tools/AxShaderTool/: CMakeLists.txt
dev/AxLib8/Tools/AxShaderTool/src/: AxShaderTool-pch.h  AxShaderTool.cppm
dev/CoreLib/AxCore/: CMakeLists.txt
dev/CoreLib/AxCore/src/: AxBase.h  AxCore-pch.cppm  AxCore-pch.h  AxCore.cppm  AxCore.h  AxCore.natvis  AxReflection.h  AxUnitTest.h
dev/CoreLib/AxCore/src/Base/: AX_MACRO.h  AX_WINDOWS.h  Base.cpp  Base.cppm  BasicMath.cppm  BasicType.cppm  ByteOrder.cppm  CpuSIMD.cppm  Debug.cpp  Debug.cppm  Enum.cppm  Logger.cppm  Math.cppm  Range.cppm  Tuple.cppm
dev/CoreLib/AxCore/src/Container/: Array.cppm  FixedSpan.cppm  IArray.cppm  IArrayStorage.cppm  InlineBuffer.cppm  RawArrayUtil.cppm  Span.cppm
dev/CoreLib/AxCore/src/Math/: BBox.cppm  Box.cppm  Float16.cppm  Margin.cppm  Mat.cppm  Math.cppm  NormInt.cppm  Num.cppm  NumSIMD1.cppm  NumSIMD2.cppm  NumSIMD3.cppm  NumSIMD4.cppm  NumTuple.cppm  Quat.cppm  Rect.cppm  Vec.cppm  Vec1.cppm  Vec2.cppm  Vec3.cppm  Vec4.cppm  VecBase.cppm  VecSimd.cppm
dev/CoreLib/AxCore/src/Memory/: Allocator.cpp  Allocator.cppm  MemAllocator.cpp  MemAllocator.cppm  MemUtil.cppm  MemoryUtil.cppm
dev/CoreLib/AxCore/src/Pointer/: ComPtr.cppm  SPtr.cppm  SPtr.h  UPtr.cppm  UPtr.h  WPtr.cppm  WPtr.h
dev/CoreLib/AxCore/src/Reflection/: Reflection.cppm
dev/CoreLib/AxCore/test/: CMakeLists.txt
dev/CoreLib/AxDetectPlatform/: CMakeLists.txt
dev/CoreLib/AxDetectPlatform/src/: AX_DETECT_COMPILER_GCC.h  AX_DETECT_COMPILER_VC.h  AX_DETECT_PLATFORM.h
dev/CoreLib/AxNativeUI/: CMakeLists.txt
dev/CoreLib/AxNativeUI/src/: AxNativeUI-pch.h  AxNativeUI.cppm  AxNativeUI.h
dev/CoreLib/AxPlatform/: CMakeLists.txt
dev/CoreLib/AxPlatform/src/: AxPlatform-pch.cppm  AxPlatform-pch.h  AxPlatform.cppm  AxPlatform.h  AxPlatform.natvis  AxUnitTest.h
dev/CoreLib/AxPlatform/test/: CMakeLists.txt
dev/CoreLib/AxRender/: CMakeLists.txt
dev/CoreLib/AxRender/src/: AxRender-pch.cppm  AxRender-pch.h  AxRender.cppm  AxRender.h
dev/CoreLib/AxUI/: CMakeLists.txt
dev/CoreLib/AxUI/src/: AxUI-pch.cppm  AxUI-pch.h  AxUI.cppm
dev/CoreLib/Tools/AxHeaderTool/: CMakeLists.txt
dev/EditorApp/: CMakeLists.txt
dev/EditorApp/src/: AxEditorApp-main.cpp  AxEditorApp.cpp  AxEditorApp.cppm
dev/Nsight/: .gitignore  AxEngine.ngfx-proj
dev/libax8/AxCore/: CMakeLists.txt
dev/libax8/AxCore/src/: AxCore-Common.cppm  AxCore-Common.h  AxCore-OS_Windows.h  AxCore-pch.h  AxCore.cppm  AxCore.h  AxCore.natvis  AxUnitTest.h
dev/libax8/AxCore/test/: CMakeLists.txt
dev/libax8/AxEditor/: CMakeLists.txt
dev/libax8/AxEditor/src/: AxEditor-Common.cppm  AxEditor.cppm
dev/libax8/AxEngine/: CMakeLists.txt
dev/libax8/AxEngine/src/: AxEngine-Common.cppm  AxEngine-Common.h  AxEngine.cppm  AxEngine.h
dev/libax8/AxImUI/: CMakeLists.txt
dev/libax8/AxImUI/src/: AxImUI-Common.h
dev/libax8/AxNativeUI/: CMakeLists.txt
dev/libax8/AxNativeUI/src/: AxNativeUI-Common.cppm  AxNativeUI-Common.h  AxNativeUI-pch.cppm  AxNativeUI-pch.h  AxNativeUI.cppm
dev/libax8/AxRender/: CMakeLists.txt
dev/libax8/AxRender/src/: AxRender-Common.cppm  AxRender-Common.h  AxRender-DirectX12.h  AxRender-pch.cppm  AxRender-pch.h  AxRender.cppm  AxRender.h  AxRender.natvis
dev/libax8/AxUI/: CMakeLists.txt
dev/libax8/AxUI/src/: AxUI-Common.cppm  AxUI-pch.cppm  AxUI-pch.h  AxUI.cppm  AxUI.h
dev/libax8/Tools/AxCppHeaderTool/: CMakeLists.txt
dev/libax8/Tools/AxFileTool/: CMakeLists.txt
dev/libax8/Tools/AxHeaderTool/: CMakeLists.txt
dev/libax8/Tools/AxShaderTool/: CMakeLists.txt
(+1269 files in other folders)
